# zwift_click_handling

./: .env  LICENSE  README.md  app.py  bluetoothctl_characteristics.txt  characteristics.py  constants.py  pyproject.toml  run.bat
